fixato un contrasto di colore

--- a/Touhou_dynamic/style/style.css
+++ b/Touhou_dynamic/style/style.css
@@ -184,7 +184,7 @@ div.data {
 	padding: 1%;
 	margin: 1%;
 	margin-left: 0;
-	background-color: #ff8f8f;
+	background-color: #ffe7e7;
 	border: 1pt solid #bbb;
 	border-radius: 4pt;
 }
